// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 cvPqli"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ ciLygA"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 fiUdIG"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ dlbSVZ"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 bXdKPp"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ dYqQHE"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 iYzeZJ"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ bxlHKV"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 jvQSDB"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hTzPEr"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 cvPqli"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ kHLfwz"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 ifPnXw"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ kUfnao"
      color="danger"
      type="button"
    />
  </div>
=======
  <button
    class="Button-mdtvtf-0 ebSMkz"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      disabled=""
      type="button"
    >
      Click
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
</div>
`;
=======
  <button
    class="Button-mdtvtf-0 eVVyXU"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
>>>>>>> origin/develop
